apply plugin: 'com.android.application'
//apply plugin: 'me.tatarka.retrolambda'

android {
    compileSdkVersion 29
    defaultConfig {
        applicationId "com.prituladima.android.redit"
        minSdkVersion 18
        targetSdkVersion 29
        versionCode 1
        versionName "1.0"
        buildConfigField "boolean", "SHOW_LOGS", "true"
        buildConfigField "String", "BASE_URL", "\"https://reddit.com\""
    }
    buildTypes {
        release {
            minifyEnabled false
            shrinkResources false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    lintOptions {
        abortOnError false
    }
}

dependencies {

    implementation 'com.android.support:appcompat-v7:28.0.0'
    implementation 'com.android.support.constraint:constraint-layout:1.1.3'

    implementation 'com.google.dagger:dagger:2.27'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.27'

    implementation 'com.google.auto.value:auto-value:1.3'
    annotationProcessor 'com.google.auto.value:auto-value:1.3'

    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
    implementation 'com.squareup.retrofit2:adapter-rxjava:2.8.1'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.6.0'

    annotationProcessor 'com.ryanharter.auto.value:auto-value-gson:0.3.1'
    annotationProcessor 'com.ryanharter.auto.value:auto-value-parcel:0.2.3-rc2'

    implementation 'io.reactivex:rxjava:1.3.8'
    implementation 'io.reactivex:rxandroid:1.2.1'

    implementation 'com.jakewharton:butterknife:10.2.1'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'

    implementation 'com.android.support:recyclerview-v7:28.0.0'
    implementation 'com.android.support:customtabs:28.0.0'
    implementation 'com.android.support:cardview-v7:28.0.0'

    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'

    implementation 'com.orhanobut:hawk:2.0.1'

    implementation 'org.ocpsoft.prettytime:prettytime:4.0.5.Final'

    compileOnly "io.michaelrocks:paranoid-core:0.1.7"
}
